...
                android:text="@string/app_name"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerLeague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.AppCompatSpinner>
    <ProgressBar
        android:id="@+id/loader"
        android:visibility="gone"
...
        app:layout_constraintTop_toTopOf="parent" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/listTeamLeague"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
